Add Media Controller and Service logic
