# cuchucambiazo/src/main/java/com/cuchucambiazo/domain/controller/MediaController.java
@@ -1,21 +1,28 @@
 package com.cuchucambiazo.domain.controller;
 
 import api.cuchucambiazo.controller.media.api.MediaApi;
-import api.cuchucambiazo.controller.media.model.Media;
-import api.cuchucambiazo.controller.media.model.MediaResponse;
+import api.cuchucambiazo.controller.media.model.*;
+import com.cuchucambiazo.domain.service.MediaService;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 public class MediaController implements MediaApi {
 
+    @Autowired
+    private MediaService service;
+
     @Override
-    public ResponseEntity<MediaResponse> getMedias() {
-        return MediaApi.super.getMedias();
+    public ResponseEntity<GetMediaResponse> getMedias(GetMediaRequest getMediaRequest) {
+        GetMediaResponse response = service.getMedias(getMediaRequest);
+        return new ResponseEntity<>(response, HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<MediaResponse> saveMedia(Media media) {
-        return MediaApi.super.saveMedia(media);
+    public ResponseEntity<GeneralBusinessResponse> saveMedia(Media media) {
+        service.saveMedia(media);
+        return new ResponseEntity<>(HttpStatus.ACCEPTED);
     }
 }
