# cuchucambiazo/src/main/java/com/cuchucambiazo/user/UserController.java
@@ -1,9 +1,9 @@
 package com.cuchucambiazo.user;
 
 import api.cuchucambiazo.controller.user.api.UsersApi;
+import api.cuchucambiazo.controller.user.model.GeneralBusinessResponse;
 import api.cuchucambiazo.controller.user.model.User;
 import api.cuchucambiazo.controller.user.model.UserGetResponse;
-import api.cuchucambiazo.controller.user.model.UserResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -21,9 +21,9 @@ public class UserController implements UsersApi {
     }
 
     @Override
-    public ResponseEntity<UserResponse> saveUser(User userRequest) {
+    public ResponseEntity<GeneralBusinessResponse> saveUser(User userRequest) {
 
-        UserResponse response = userService.saveUser(userRequest);
+        GeneralBusinessResponse response = userService.saveUser(userRequest);
 
         return new ResponseEntity<>(response, HttpStatus.CREATED);
     }
